add commons-codec jar

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
     <junit.version>4.12</junit.version>
     <jdk.version>1.7</jdk.version>
 	<slf4j.version>1.7.12</slf4j.version>
+	<commons-codec.version>1.10</commons-codec.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -54,6 +55,11 @@
 	    <artifactId>slf4j-api</artifactId>
 	    <version>${slf4j.version}</version>
 	    <scope>test</scope>
+	  </dependency>
+	  <dependency>
+	    <groupId>commons-codec</groupId>
+	    <artifactId>commons-codec</artifactId>
+	    <version>${commons-codec.version}</version>
 	  </dependency>
     </dependencies>
   </dependencyManagement>
