--- a/mkbasic-commons/pom.xml
+++ b/mkbasic-commons/pom.xml
@@ -45,6 +45,10 @@
 	    <artifactId>junit</artifactId>
 	    <scope>test</scope>
 	</dependency>
+	<dependency>
+	    <groupId>commons-codec</groupId>
+	    <artifactId>commons-codec</artifactId>
+	  </dependency>
   </dependencies>
   
 </project>
